--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,27 @@ asyncio  # built-in, no need to install
 pydantic
 
 # Langchain + OpenAI support
-langchain>=0.1.14
-langchain-openai>=0.1.3
+langchain
+langchain-openai
 
 # LangGraph (for ReAct agent)
-langgraph>=0.0.20
+langgraph
 
 # MCP tooling adapter for LangChain
 langchain-mcp-adapters  # assuming pip-installable or custom module
 
 # OpenAI (if using ChatOpenAI model)
-openai>=1.14.0
+openai
 
 # Web server interface (FastMCP)
-fastapi>=0.110.0
-uvicorn>=0.29.0
-httpx>=0.27.0
+fastapi
+uvicorn
+httpx
 
 # Fake data generation
-faker>=19.6.2
+faker
 
 # Utility
-python-dotenv>=1.0.1
-tqdm>=4.66.2
-typing-extensions>=4.10.0
+python-dotenv
+tqdm
+typing-extensions
